# SIgame-linux

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
client/frontend/: app.js  editor.js  index.html  main.js  net.js  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: main.rs
core/: Cargo.toml
core/src/: archive.rs  error.rs  game.rs  lib.rs  pack.rs  siq.rs  siq_export.rs
demo/: demo.sgpack
docs/: architecture.md  game-rules.md  install.md  lan-play.md  networking.md  pack-format.md  siq-export.md  siq-import.md  slides-and-host.md
scripts/: Dockerfile.build  build-in-docker.sh  build-linux.sh  prep-sidecar.sh
server/: Cargo.toml
server/src/: hub.rs  main.rs  media.rs  protocol.rs
tests/: test_10c.py  test_10f.py  test_11a.py
