[package]
name = "sigame-client"
version = "0.3.2"
edition = "2021"
description = "Клиент SIGame-RS на Tauri (Rust-ядро + веб-интерфейс)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sigame-core = { path = "../../core" }
# Локальный HTTP-сервер для отдачи медиа (WebKitGTK не играет медиа по asset://).
tiny_http = "0.12"
# Нативные диалоги открытия/сохранения файлов (для редактора паков).
tauri-plugin-dialog = "2"
